--- a/res/style.css
+++ b/res/style.css
@@ -852,7 +852,7 @@ transition-timing-function: linear;
 }
 
 .footer-container {
-	/* position: absolute; */
+	position: absolute;
 	right: 0;
 	bottom: 0;
 	left: 0;
